--- a/zjb/Tpl/Banner/Lgbanner.html
+++ b/zjb/Tpl/Banner/Lgbanner.html
@@ -10,8 +10,8 @@
     <p> 
 
     <div id="ing">
-      <span>商家合作：133-0578-0578<br>
-        资金合作：153-0578-0578
+      <span>商家合作：{$Think.session.business_corp}<br>
+        资金合作：{$Think.session.fund_corp}
       </span>
     </div>
   </div>
