--- a/zjb/Tpl/Common/top.html
+++ b/zjb/Tpl/Common/top.html
@@ -1,23 +1,23 @@
-<div id="pos" >	
-    <ul class="nav nav-tabs ">
+<nav id="pos" class='navbar navbar-default navbar-fixed-top' role='navigation'>	
+    <ul class="nav navbar-nav pull-left">
+        <li><p class='navbar-text'>中介帮欢迎您，{$Think.session.mname}</p></li>
+    </ul>
+    <ul class="nav navbar-nav pull-right">
         <if condition="session('?mname')">
-            <li class="active">欢迎您，{$Think.session.mname}</li>
-            <li class="active"><a href="{:U('Member/index')}">会员中心</a></li>
-            <li class='active'><a href='{:U("Index/logout")}'>注销</a></li>
-        <else />
+            <li ><a href="{:U('Member/index')}">会员中心</a></li>
+            <li><a href="{:U('CompanyMan/index')}">商家主页管理</a></li>
+            <li ><a href='{:U("Index/logout")}'>注销</a></li>
+            <else />
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     注册<span class="caret"></span>
                 </a>
-		<ul class="dropdown-menu">
-			<li><a href="{:U('Register/register')}">普通会员注册</a></li>
-			<li><a href="{:U('Register/hyregister')}">商家会员注册</a></li>
-		</ul>
+                <ul class="dropdown-menu">
+                    <li><a href="{:U('Register/register')}">普通会员注册</a></li>
+                    <li><a href="{:U('Register/hyregister')}">商家会员注册</a></li>
+                </ul>
             </li>
-            <li class="active"><a href="{:U('Index/login')}">登录</a></li>
+            <li ><a href="{:U('Index/login')}">登录</a></li>
         </if>
-			
     </ul>
-	
-</div>	
-	
+</nav>	
