--- a/zjb/Tpl/Company/index.html
+++ b/zjb/Tpl/Company/index.html
@@ -1,40 +1,34 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
     <head>
-        <title>
-            公司
-        </title>
+        <title> 商家主页</title>
     <include file="./zjb/Tpl/Injection/injection.html"/>
-
     <link rel="stylesheet" href="__ROOT__/Public/Home/company.css" type="text/css" />
-
 </head>
 <body>
     <div id="container">
-        <include file="Common:top"/>
         <include file="./zjb/Tpl/Banner/Combanner.html"/>
         <div class="bs-example">
-            <div id="carousel-example-generic" class="carousel slide bs-docs-carousel-example">
+            <div id="carousel-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
                 <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    <foreach name="ads" item="vo">
+                        <li data-target="#carousel-generic" data-slide-to="{$key}" <if condition="$key eq 0">class='active'</if>></li>
+                    </foreach>
                 </ol>
+                <!-- Wrapper for slides -->
                 <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="__ROOT__/Public/images/about_banner.jpg" data-src="holder.js/900x500/auto/#777:#555/text:First slide" alt="First slide">
-                    </div>
-                    <div class="item">
-                        <img src="__ROOT__/Public/images/1.jpg" data-src="holder.js/900x500/auto/#666:#444/text:Second slide" alt="Second slide">
-                    </div>
-                    <div class="item">
-                        <img src="__ROOT__/Public/images/about_banner.jpg" data-src="holder.js/900x500/auto/#555:#333/text:Third slide" alt="Third slide">
-                    </div>
+                    <foreach name="ads" item="vo">
+                        <div class="item <if condition='$key eq 0'>active</if>">
+                            <img src="__ROOT__/{$vo}" alt="no img">    
+                        </div>
+                    </foreach>
                 </div>
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-generic" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                 </a>
-                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                <a class="right carousel-control" href="#carousel-generic" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right"></span>
                 </a>
             </div>
