--- a/zjb/Tpl/Company/view.html
+++ b/zjb/Tpl/Company/view.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-3 col-md-offset-3"
              <div class="thumbnail">
-                <a  href="{:U('company/'.$vo['id'])}"><img src='__ROOT__/{$vo.logo}' alt="暂无logo"></a>
+                <a  href="__APP__/{$vo.id}"><img src='__ROOT__/{$vo.logo}' alt="暂无logo"></a>
                 <div class="caption">
                     <h3  style="text-align: center;">{$vo.name}</h3>
                     <p><span>地址：</span>&nbsp&nbsp &nbsp <span>{$vo.address}</span></p>
