--- a/zjb/Tpl/Index/index.html
+++ b/zjb/Tpl/Index/index.html
@@ -53,7 +53,7 @@
                     <volist name="list" id="vo">
                         <li class="span3">
                             <div class="thumbnail">
-                                <a  href="{:U('company/'.$vo['id'])}"><img src='__ROOT__/{$vo.logo}' alt="暂无logo"></a>
+                                <a  href="__APP__/{$vo.id}"><img src='__ROOT__/{$vo.logo}' alt="暂无logo"></a>
                                 <div class="caption">
                                     <h3  style="text-align: center;">{$vo.name}</h3>
                                     <p><span>地址：</span>&nbsp&nbsp &nbsp <span>{$vo.address}</span></p>
