--- a/zjb/Tpl/Loan/view.html
+++ b/zjb/Tpl/Loan/view.html
@@ -65,7 +65,7 @@
                     <div class="arc_author">
                         <if condition='$info.user_type'>
                             <div class="thumbnail">
-                                <a  href="{:U('company/'.$info['company_id'])}"><img src='__ROOT__/{$info.logo}' alt="暂无logo"></a>
+                                <a  href="__APP__/{$info.company_id}"><img src='__ROOT__/{$info.logo}' alt="暂无logo"></a>
                                 <div class="caption">
                                     <h3  style="text-align: center;">{$info.company_name}</h3>
                                     <p><span>地址：</span>&nbsp&nbsp &nbsp <span>{$info.company_addr}</span></p>
