--- a/zjb/Tpl/Company/message.html
+++ b/zjb/Tpl/Company/message.html
@@ -1,43 +1,20 @@
 ﻿<!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-<title>
-回答
-</title>
-<include file="./zjb/Tpl/Injection/injection.html"/>
-<js href="__ROOT__/Public/dist/js/application.js" />
-<link rel="stylesheet" href="__ROOT__/Public/Home/company.css" type="text/css" />
-<script>
-$('#myTab a').click(function (e) {
-  e.preventDefault()
-  $(this).tab('show')
-})
-</script>
- </head>
- <body>
- 	
- <div id="container">
-	<include file="./zjb/Tpl/Banner/Combanner.html"/>
-	 <div id="main">
-	 <h3><span class="label label-default">最新消息</span></h3>
-				<div id="c1">
-				<form class="form-search form-inline"><input class="input-medium search-query" type="text" />
-				<button class="btn" contenteditable="true" type="submit">查找</button></form> 
-				<div id="xw" style="height:100%;width:100%; float: left;" >
-				   <volist name="list" id="vo">
-					<div class="list-group"  style="background-color:#fff;" 
-					data-content="And here's some amazing content. It's verysdasdasengagdddddddddddddddddddddddddddddddrig2222222222222222222222222222222222222222222222222222222222222222222dddddddddddddddddddddddddddddddddddddddddht?" data-container="body" data-toggle="popover" data-placement="bottom"  >
-  <a class="list-group-item active">
-    
-    <p class="list-group-item-text" style="height:100%;width:100%;font-size:15px;word-break:break-word; word-wrap:break-word">dsafdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
-	</p>
-  </a>
-</div>
-</volist>
-
-</div>
-</div>
-		 <include file="./zjb/Tpl/Comint/Comint.html"/>
-  </div>
- </body>
+    <head>
+        <title>商家主页</title>
+    <include file="./zjb/Tpl/Injection/injection.html"/>
+    <link rel="stylesheet" href="__ROOT__/Public/Home/company.css" type="text/css" />
+</head>
+<body>
+    <div id="container">
+        <include file="./zjb/Tpl/Banner/Combanner.html"/>
+        <div class='row'>
+            <div class='col-md-9'>
+            </div>
+            <div class='col-md-3'>
+                 <include file="Company:com_info"/>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
