--- a/zjb/Tpl/CompanyMan/message.html
+++ b/zjb/Tpl/CompanyMan/message.html
@@ -21,13 +21,11 @@
                 <volist name="list" id="vo">
                     <tr>
                         <td>{$i}</td>
-                        <td><if condition="$vo['is_replied]">已回复<else/>未回复</if></td>
+                        <td><if condition="$vo['is_replied']">已回复<else/>未回复</if></td>
                         <td>{$vo.content}</td>
                         <td>{$vo.poster}</td>
                         <td>{$vo.post_time|date="Y-m-d",###}</td>
                         <td>
-                            <a role='button' class='btn btn-success btn-sm' href="{:U('Common/city?shi='.$vo['city_id'])}">查看</a>
-                            <a role='button' class='btn btn-danger btn-sm' href="{:U('CompanyMan/add_article',array('edit'=>$vo['id']))}">修改</a>
                         </td>
                     </tr>
                 </volist>
