--- a/zjb/Tpl/Common/top.html
+++ b/zjb/Tpl/Common/top.html
@@ -1,7 +1,7 @@
 <nav id="pos" class='navbar navbar-default navbar-fixed-top' role='navigation'>	
     <if condition="session('?mname')">
         <ul class="nav navbar-nav pull-left">
-            <li><p class='navbar-text'>中介帮欢迎您，{$Think.session.mname}</p></li>
+            <li><p class='navbar-text'><a href="__APP__">中介帮欢迎您，{$Think.session.mname}</a></p></li>
         </ul>
     </if>
     <ul class="nav navbar-nav pull-right">
