--- a/zjb/Tpl/Company/introduction.html
+++ b/zjb/Tpl/Company/introduction.html
@@ -16,7 +16,7 @@
             <h2>
                 <span id="lblCorpName">{$company.name}</span></h2>
             <div class="qytext">
-                <strong>公司类型：</strong><span id="lblCorpType">{$company.name}</span></div>
+                <strong>公司类型：</strong><span id="lblCorpType">{$company.company_type}</span></div>
             <div class="qytext">
                 <strong>联系电话：</strong><span id="lblLinkTel">{$company.mobile}</span></div>
             <div class="qytext">
