--- a/zjb/Tpl/CompanyMan/index.html
+++ b/zjb/Tpl/CompanyMan/index.html
@@ -27,7 +27,7 @@
                         <td>{$vo.title}</td>
                         <td>{$vo.post_time|date="Y-m-d",###}</td>
                         <td>
-                            <a role='button' class='btn btn-success btn-sm' href="{:U('Common/city?shi='.$vo['city_id'])}">查看</a>
+                            <a role='button' class='btn btn-success btn-sm' href="{:U(session('m_company_id').'/article_view?id='.$vo['id'])}">查看</a>
                             <a role='button' class='btn btn-danger btn-sm' href="{:U('CompanyMan/add_article',array('edit'=>$vo['id']))}">修改</a>
                         </td>
                     </tr>
