--- a/zjb/Tpl/CompanyMan/message.html
+++ b/zjb/Tpl/CompanyMan/message.html
@@ -26,6 +26,9 @@
                         <td>{$vo.poster}</td>
                         <td>{$vo.post_time|date="Y-m-d",###}</td>
                         <td>
+                        <if condition="!$vo['is_replied']">
+                            <a href="{:U('CompanyMan/answer?id='.$vo['id'])}" class='btn btn-danger btn-sm'>回复</a>
+                        </if>
                         </td>
                     </tr>
                 </volist>
