--- a/zjb/Tpl/pc/Common/search_sel.html
+++ b/zjb/Tpl/pc/Common/search_sel.html
@@ -1,12 +1,12 @@
 <volist name='searchArray' id='s'>
     <div class="row">
-        <a class="navbar-brand" href="#">{$s['name']} :</a>
+        <a class='navbar-brand'>{$s['name']}:</a>
         <ul class="nav nav-pills navbar-brand">
             <li <if condition="!isset($_GET[$s['key']])">class="active"</if>>
             <a href=<?php echo (isset($_GET[$s['key']])?filterUrl($s['key']):'#')?>>{$s['default']}</a>
             </li>
             <foreach name="s['data']" item="v">
-                <li <if condition="$_GET[$s['key']] eq $v['id']">class="active"</if>>
+                <li <if condition="(isset($_GET[$s['key']]))AND($_GET[$s['key']] eq $v['id'])">class="active"</if>>
                 <a href=<?php echo filterUrl($s['key']).'/'.$s['key'].'/'.$v['id'];?>>{$v['name']}</a>
                 </li>
             </foreach>
