--- a/zjb/Tpl/pc/Invest/index.html
+++ b/zjb/Tpl/pc/Invest/index.html
@@ -14,7 +14,8 @@
         <include file="Common:banner" />
         <include file="Common:nav" />
         <div id="main">
-            <form class="form-search form-inline"><input class="input-medium search-query" type="text" />
+            <form class="form-search form-inline" action="__SELF__" method="get">
+                <input name="search" class="input-medium search-query" type="text" />
                 <button class="btn" contenteditable="true" type="submit">查找</button>
             </form> 
             <div id='c2'>
@@ -22,6 +23,11 @@
             </div>
         </div>
         <div id="footer">
+            <if condition="isset($_GET['search'])">
+                <div class="alert alert-danger">
+                    <h3>【<span class="text-success">{$Think.get.search}</span>】的搜索结果如下：</h3>
+                </div>
+            </if>
             <div class="span6">
                 <ul class="thumbnails">
                     <volist name="list" id="vo">
@@ -33,7 +39,7 @@
                                     <p><span>类型： {$vo.type}</span>&nbsp&nbsp &nbsp <span>抵押物： {$vo.pawn}</span></p>
                                     <p><span>利率： {$vo.interest_rate}% </span>&nbsp&nbsp &nbsp <span>还款方式： {$vo.refund_way}</span></p>
                                     <p><span>金额：</span><span>{$vo.price}万元</span>&nbsp&nbsp &nbsp <span>期限：</span><span>{$vo.deadline}个月</span></p>
-                                    <p><span>地址： {$vo.zone_name}</span>&nbsp&nbsp &nbsp
+                                    <p><span>{$vo.zone_name}</span>&nbsp&nbsp &nbsp
                                         <span><if condition="$vo.user_type" >{$vo.company_name}<else />个人信息</if></span>
                                     </p>
                                 </div>
