change car series setting

--- a/zjb/Tpl/pc/Index/index.html
+++ b/zjb/Tpl/pc/Index/index.html
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <form class="form-search form-inline" action="__SELF__" method="get">
-                <input name="search" class="input-medium search-query" type="text" />
+                <input name="search" class="input-medium search-query" type="text" placeholder="请输入商家关键字，地址和电话"/>
                 <button class="btn" contenteditable="true" type="submit">查找</button>
             </form>
             <div id="c2">
