--- a/zjb/Tpl/pc/Invest/index.html
+++ b/zjb/Tpl/pc/Invest/index.html
@@ -15,7 +15,7 @@
         <include file="Common:nav" />
         <div id="main">
             <form class="form-search form-inline" action="__SELF__" method="get">
-                <input name="search" class="input-medium search-query" type="text" />
+                <input name="search" class="input-medium search-query" type="text" placeholder="请输入放款金额关键字"/>
                 <button class="btn" contenteditable="true" type="submit">查找</button>
             </form> 
             <div id='c2'>
