--- a/zjb/Tpl/pc/Register/hyregister.html
+++ b/zjb/Tpl/pc/Register/hyregister.html
@@ -70,7 +70,8 @@
                     <textarea name="business" class="textarea" style="float:left;margin-top:9px;height:50px;"> </textarea>
                   </li>
                   <li class="info1"><span>联系人:</span><input type="text" name="uname" class="box"/></li>
-                  <li class="info1"><span>联系人手机:&nbsp;</span><input type="text" name="phone" class="box"/></li>
+                  <li class="info1"><span>联系人手机:&nbsp;</span>
+                      <input type="text" name="phone" class="box" placeholder="将用作登录名"/></li>
                   <li class="info1"><span>联系人邮箱:</span><input type="text" name="email" class="box"/></li>
                   <li class="info1"><span>&nbsp;&nbsp;&nbsp;&nbsp;密码:&nbsp;</span><input type="password" name="upwd" class="box"/></li>
                   <li class="info1"><span>确认密码:&nbsp;</span><input type="password" name="upwd1" class="box"/></li>
